# rust-clean-architecture-experiment

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fly.toml
migrations/: 1_todo.sql
src/: app.rs  main.rs  postgres_repository.rs  sqlite_repository.rs
src/domain/: entities.rs  traits.rs
src/ports/: http.rs
